chore: proto-model renamed to rpc-client
Refs: XRDDEV-2673

--- a/src/security-server/admin-service/application/build.gradle
+++ b/src/security-server/admin-service/application/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation(project(':common:common-api-throttling'))
     implementation(project(":common:common-verifier"))
     implementation(project(":security-server:openapi-model"))
-    implementation(project(":proxy:proto-model"))
+    implementation(project(":proxy:rpc-client"))
 
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-web")
