feat: As a Security Server Administrator I want the software to automatically renew signing and authentication certificates issued by trusted CA-s that support ACME so that the renewal would happen automatically
refs: XRDDEV-2536

--- a/ansible/roles/xroad-ca/files/home/ca/CA/CA.cnf
+++ b/ansible/roles/xroad-ca/files/home/ca/CA/CA.cnf
@@ -180,6 +180,8 @@ keyUsage = critical, digitalSignature, keyEncipherment, dataEncipherment, keyAgr
 extendedKeyUsage = clientAuth, serverAuth
 
 [extensions]
+subjectKeyIdentifier = hash, issuer:always
+authorityKeyIdentifier = keyid:always, issuer:always
 basicConstraints = CA:FALSE
 keyUsage = critical,nonRepudiation
 #keyUsage = critical, digitalSignature, keyEncipherment, dataEncipherment, keyAgreement
