--- a/Docker/securityserver/files/override-docker.ini
+++ b/Docker/securityserver/files/override-docker.ini
@@ -7,3 +7,5 @@ server-conf-cache-period = 10
 [configuration-client]
 #default 60
 update-interval = 10
+[proxy-ui-api]
+acme-challenge-port-enabled=true
