--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -13,6 +13,7 @@ include "monitoring-conf"
 
 
 include "common"
+include "common:common-acme"
 include "common:common-admin-api"
 include "common:common-api-throttling"
 include "common:common-db"
