--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -36,6 +36,7 @@ include "proxy:rpc-client"
 include "proxy:application"
 include "signer"
 include "configuration-proxy"
+include "configuration-client:rpc-client"
 include "configuration-client:application"
 include "asicverifier"
 include "asic-util"
