chore: rpc client modules renamed
Refs: XRDDEV-2673

--- a/src/security-server/admin-service/application/build.gradle
+++ b/src/security-server/admin-service/application/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     implementation(project(':common:common-api-throttling'))
     implementation(project(":common:common-verifier"))
     implementation(project(":security-server:openapi-model"))
-    implementation(project(":proxy:rpc-client"))
-    implementation(project(":configuration-client:rpc-client"))
+    implementation(project(":proxy:proxy-rpc-client"))
+    implementation(project(":configuration-client:confclient-rpc-client"))
 
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-web")
