--- a/src/configuration-client/application/build.gradle
+++ b/src/configuration-client/application/build.gradle
@@ -32,7 +32,7 @@ plugins {
 dependencies {
     implementation(platform(libs.springBoot.bom))
 
-    implementation project(':configuration-client:rpc-client')
+    implementation project(':configuration-client:confclient-rpc-client')
     implementation project(':common:common-globalconf')
     implementation project(':common:common-scheduler')
     implementation project(':common:common-jetty')
