--- a/src/proxy/application/build.gradle
+++ b/src/proxy/application/build.gradle
@@ -13,7 +13,7 @@ sourceSets {
 dependencies {
     implementation(platform(libs.springBoot.bom))
 
-    implementation(project(':proxy:rpc-client'))
+    implementation(project(':proxy:proxy-rpc-client'))
     implementation(project(':common:common-jetty'))
     implementation(project(':common:common-message'))
     implementation(project(':common:common-globalconf'))
