ci: ansible script changes to install test with noble  (#2261)
* ci: ansible script changes to install test with noble

Refs: XRDDEV-2670

* fix: ansible script fix

Refs: XRDDEV-2670

* fix: ansible script fix

Refs: XRDDEV-2670

* fix: ansible script fix

Refs: XRDDEV-2670

* fix: use keyrings instead trusted.gpg.d

Refs: XRDDEV-2670

* fix: ansible script fix

Refs: XRDDEV-2670

* fix: ansible script fix

Refs: XRDDEV-2670

* fix: ansible script fix

Refs: XRDDEV-2670

* fix: ansible script fixes

Refs: XRDDEV-2670

* fix: ansible script fixes

Refs: XRDDEV-2670

* fix: ansible script fix

Refs: XRDDEV-2670

* fix: ansible script's fix

Refs: XRDDEV-2670

* fix: ansible script's fix

Refs: XRDDEV-2670

* fix: change repo public key file format to asc

Refs: XRDDEV-2670

* fix: use shell because get_url is not supported for noble

Refs: XRDDEV-2670

* fix: change repo public key file format back to gpg

Refs: XRDDEV-2670

--- a/ansible/roles/xroad-base/tasks/ubuntu.yml
+++ b/ansible/roles/xroad-base/tasks/ubuntu.yml
@@ -21,10 +21,8 @@
     group: root
   when: (disable_automatic_upgrades is defined) and (disable_automatic_upgrades)
 
-- name: Install X-Road apt repo key
-  apt_key:
-    url: "{{ubuntu_apt_key}}"
-    state: present
+- name: Add X-Road apt repo key
+  shell: "curl -sL {{ ubuntu_apt_key }} | sudo gpg --dearmor --batch --yes -o {{ ubuntu_apt_key_file }}"
   when: package_source == "remote" and (ansible_distribution == "Ubuntu")
 
 - name: Remove old repo config
@@ -34,7 +32,7 @@
 
 - name: xroad apt repository
   apt_repository:
-    repo: "{{ubuntu_apt_repo}}"
+    repo: "{{ ubuntu_apt_repo_with_option }}"
     state: present
     filename: xroad
     update_cache: yes
