chore: ds-catalog-service tests fix
Refs: XRDDEV-2673

--- a/src/central-server/ds-catalog-service/build.gradle
+++ b/src/central-server/ds-catalog-service/build.gradle
@@ -9,6 +9,7 @@ configurations {
 
     configureEach {
         exclude group: 'org.eclipse.edc', module: 'jetty-core'
+        exclude group: 'com.apicatalog', module: 'titanium-json-ld-jre8' //transient dep that creates errors
     }
 
 }
