chore: move src/configuration-client to src/configuration-client/application
Refs: XRDDEV-2673

--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -34,7 +34,7 @@ include "proxy"
 include "proxy:application"
 include "signer"
 include "configuration-proxy"
-include "configuration-client"
+include "configuration-client:application"
 include "asicverifier"
 include "asic-util"
 include "monitor"
