chore: remove local hashicorp vault from ss
Refs: XRDDEV-2698

--- a/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
@@ -23,5 +23,5 @@ edc.jsonld.http.enabled=true
 # X-Road custom props
 edc.ih.credentials.path=/etc/xroad-edc/credentials
 
-edc.vault.hashicorp.url=http://127.0.0.1:8200
+edc.vault.hashicorp.url=http://openbao:8200
 edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
