--- a/Docker/securityserver/files/edc/etc/edc-connector.properties
+++ b/Docker/securityserver/files/edc/etc/edc-connector.properties
@@ -37,7 +37,7 @@ edc.jsonld.http.enabled=true
 # x-Road configuration
 xroad.messagelog.enabled=true
 
-edc.vault.hashicorp.url=http://127.0.0.1:8200
+edc.vault.hashicorp.url=http://openbao:8200
 edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
 
 edc.negotiation.state-machine.iteration-wait-millis=300
