chore: remove local hashicorp vault from cs
Refs: XRDDEV-2698

--- a/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
@@ -16,5 +16,5 @@ edc.http.client.https.enforce=true
 # Required by IdentityHubCredentialInsertionExtension for private key retrieval
 edc.iam.sts.privatekey.alias=did:web:localhost-private-key
 
-edc.vault.hashicorp.url=http://127.0.0.1:8200
+edc.vault.hashicorp.url=http://openbao:8200
 edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
