--- a/Docker/xrd-dev-stack/compose.edc.yaml
+++ b/Docker/xrd-dev-stack/compose.edc.yaml
@@ -75,3 +75,17 @@ services:
     ports:
       - 16686:16686
       - 4318:4318
+  openbao:
+    build:
+      context: ../
+      dockerfile: xrd-dev-stack/openbao/Dockerfile
+    container_name: openbao
+    deploy:
+      resources:
+        reservations:
+          memory: 32M
+        limits:
+          memory: 64M
+    networks:
+      - xroad-network
+
