chore: Refactor GlobalConf/ServerConf/KeyConf singleton pattern
XRDDEV-2674

--- a/src/common/common-op-monitoring/build.gradle
+++ b/src/common/common-op-monitoring/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     implementation project(':common:common-message')
     implementation project(':common:common-verifier')
+    implementation project(':serverconf')
 }
