chore: Refactor GlobalConf/ServerConf/KeyConf singleton pattern
Refs: XRDDEV-2674

--- a/src/addons/op-monitoring/build.gradle
+++ b/src/addons/op-monitoring/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation project(':common:common-domain')
     implementation project(':common:common-message')
     implementation project(':common:common-jetty')
+    implementation project(':common:common-verifier')
     implementation project(':serverconf')
 
     testImplementation project(':common:common-test')
