--- a/src/security-server/admin-service/ui/package.json
+++ b/src/security-server/admin-service/ui/package.json
@@ -2,6 +2,7 @@
   "name": "xroad-securityserver-admin-ui",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "pnpm run generate-types && vitest --run && vite build",
