--- a/src/common/common-int-test/src/main/resources/META-INF/ca-container/files/acme_srv.cfg
+++ b/src/common/common-int-test/src/main/resources/META-INF/ca-container/files/acme_srv.cfg
@@ -12,7 +12,7 @@ issuing_ca_key: /home/ca/CA/private/ca.key.pem
 #issuing_ca_key_passphrase:
 issuing_ca_cert: /home/ca/CA/certs/ca.cert.pem
 issuing_ca_crl: /home/ca/CA/crl/ca.crl.pem
-#cert_validity_days: 30
+cert_validity_days: 30
 #cert_validity_adjust: True
 cert_save_path: /home/ca/CA/newcerts
 ca_cert_chain_list: ["/home/ca/CA/certs/ca.cert.pem"]
@@ -39,3 +39,6 @@ challenge_validation_disable: False
 
 [Order]
 tnauthlist_support: False
+
+[Renewalinfo]
+renewaltreshold_pctg: 90
