--- a/src/security-server/edc/extensions/xroad-messagelog/build.gradle
+++ b/src/security-server/edc/extensions/xroad-messagelog/build.gradle
@@ -14,7 +14,10 @@ dependencies {
     implementation(project(":common:common-domain")) {
         exclude group: 'org.eclipse.jetty'
     }  // for the ClientId, ServiceId identifiers
+    implementation(project(":serverconf"))
 
+    testImplementation project(':common:common-keyconf')
     testImplementation libs.edc.junit
     testImplementation libs.assertj.core
+    testImplementation libs.mockito.jupiter
 }
