feat: Separate Control & Data Plane runtimes

--- a/Docker/centralserver/files/edc/etc/edc-connector.properties
+++ b/Docker/centralserver/files/edc/etc/edc-connector.properties
@@ -2,17 +2,17 @@ edc.participant.id=did:web:localhost
 
 web.http.port=9191
 web.http.path=/api
-web.http.identity.port=9193
-web.http.identity.path=/identity
+web.http.control.port=9192
+web.http.control.path=/control
+web.http.management.port=9193
+web.http.management.path=/management
 web.http.protocol.port=9194
 web.http.protocol.path=/protocol
 edc.public.key.alias=public-key
-web.http.public.port=9291
+web.http.public.port=9293
 web.http.public.path=/public
-web.http.xroad.public.port=9293
+web.http.xroad.public.port=9294
 web.http.xroad.public.path=/xroad/public
-web.http.control.port=9192
-web.http.control.path=/control
 
 edc.dsp.callback.address=https://localhost:9194/protocol
 
