--- a/Docker/securityserver/files/ss-xroad.conf
+++ b/Docker/securityserver/files/ss-xroad.conf
@@ -64,11 +64,18 @@ autorestart=true
 priority=250
 stdout_logfile=/var/log/xroad/edc-identity-hub.log
 
-[program:xroad-edc-connector]
-command=/usr/share/xroad/bin/xroad-edc-connector
+[program:xroad-edc-control-plane]
+command=/usr/share/xroad/bin/xroad-edc-control-plane
 user=root
 startsecs=5
 autorestart=true
 priority=300
-stdout_logfile=/var/log/xroad/edc-connector.log
+stdout_logfile=/var/log/xroad/edc-control-plane.log
 
+[program:xroad-edc-data-plane]
+command=/usr/share/xroad/bin/xroad-edc-data-plane
+user=root
+startsecs=5
+autorestart=true
+priority=300
+stdout_logfile=/var/log/xroad/edc-data-plane.log
