--- a/src/security-server/edc/spi/xroad-messagelog-spi/build.gradle
+++ b/src/security-server/edc/spi/xroad-messagelog-spi/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-    api libs.edc.core.spi
+    api libs.edc.spi.core
 
     implementation(project(":common:common-messagelog"))
 }
