--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -89,7 +89,8 @@ include 'security-server:edc:extensions:xroad-jsonld'
 include 'security-server:edc:extensions:xroad-ldp-verifiable-credentials'
 include 'security-server:edc-client'
 include 'security-server:edc:xroad-edc-security'
-include 'security-server:edc:runtime:connector'
+include 'security-server:edc:runtime:control-plane'
+include 'security-server:edc:runtime:data-plane'
 include 'security-server:edc:runtime:identity-hub'
 include "security-server:system-test"
 include 'security-server:e2e-test'
