--- a/src/security-server/edc/extensions/xroad-webserver/build.gradle
+++ b/src/security-server/edc/extensions/xroad-webserver/build.gradle
@@ -9,8 +9,7 @@ dependencies {
     implementation project(":security-server:edc:spi:xroad-core-spi")
 
     api libs.jetty.servlet
-    implementation libs.edc.core.spi
-    implementation libs.edc.web.spi
-    implementation libs.edc.connector.core
-    implementation libs.edc.http.lib
+    implementation libs.edc.spi.core
+    implementation libs.edc.core.connector
+    implementation libs.edc.lib.http
 }
