chore: enable Java compiler warnings for finally and fallthrough, and fix related warnings

--- a/src/build.gradle
+++ b/src/build.gradle
@@ -102,6 +102,11 @@ configure(subprojects.findAll { !["shared-ui", "ui"].contains(it.name) }) {
 
     tasks.withType(JavaCompile).configureEach {
         options.encoding = "UTF-8"
+        // options.compilerArgs << "-Xlint:unchecked"
+        // options.compilerArgs << "-Xlint:deprecation"
+        // options.compilerArgs << "-Xlint:rawtypes"
+        options.compilerArgs << "-Xlint:fallthrough"
+        options.compilerArgs << "-Xlint:finally"
         options.compilerArgs << '-parameters'
     }
 
