--- a/src/build.gradle
+++ b/src/build.gradle
@@ -104,7 +104,7 @@ configure(subprojects.findAll { !["shared-ui", "ui"].contains(it.name) }) {
         options.encoding = "UTF-8"
         // options.compilerArgs << "-Xlint:unchecked"
         // options.compilerArgs << "-Xlint:deprecation"
-        // options.compilerArgs << "-Xlint:rawtypes"
+        options.compilerArgs << "-Xlint:rawtypes"
         options.compilerArgs << "-Xlint:fallthrough"
         options.compilerArgs << "-Xlint:finally"
         options.compilerArgs << '-parameters'
