--- a/src/security-server/edc/runtime/control-plane/build.gradle
+++ b/src/security-server/edc/runtime/control-plane/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'io.opentelemetry:opentelemetry-exporter-otlp:1.38.0'
 
     // x-road extensions
+    implementation(project(":security-server:edc:extensions:xroad-conf"))
     implementation(project(":security-server:edc:extensions:xroad-jsonld"))
     implementation(project(":security-server:edc:extensions:xroad-edr"))
     implementation(project(":security-server:edc:extensions:xroad-policy"))
